--- a/src/app/modules/mission/page/mission/mission-item/mission-item.component.html
+++ b/src/app/modules/mission/page/mission/mission-item/mission-item.component.html
@@ -1,4 +1,8 @@
-<div class="mission-item" (click)="onClick(mission.id)">
+<div
+  class="mission-item"
+  [ngClass]="{ selected: mission.id == selectedIndex }"
+  (click)="onClick(mission.id)"
+>
   <div class="mission-item-title">
     <h6>{{ mission.title }}</h6>
     <h6>{{ mission.department.name }}</h6>
