adjust missions ui

--- a/src/app/modules/mission/page/mission/mission-details/mission-details.component.html
+++ b/src/app/modules/mission/page/mission/mission-details/mission-details.component.html
@@ -1,5 +1,5 @@
 <div class="mission-details card" *ngIf="mission">
-  <div class="mission-details-title card-header">
+  <div class="mission-details-title card-header" (click)="onClick()">
     <span>{{ mission.title }}</span>
     <h5>
       <span class="badge bg-success">{{ mission.code }}</span>
@@ -8,7 +8,7 @@
   <div class="card-body">
     <div class="d-md-flex">
       <div class="value">
-        <h6>{{ mission.department.name }}</h6>
+        <h5><span class="badge primary">{{ mission.department.name }}</span></h5>
       </div>
     </div>
     <div class="d-md-flex">
@@ -65,19 +65,21 @@
     <div class="d-flex">
       <div class="value w-100">
         <ul class="list-group mb-1">
-          <li class="list-group-item active" aria-current="true">
-            <h6>Distance {{ mission.distance }} KM</h6>
+          <li class="list-group-item list-group-item-action list-group-item-light" aria-current="true">
+            <h6>Distance 450 KM</h6>
+            <!-- <h6>Distance {{ mission.distance }} KM</h6> -->
           </li>
-          <li class="list-group-item"><h6>Marrakech</h6></li>
-          <li class="list-group-item"><h6>Casablanca</h6></li>
-          <li class="list-group-item"><h6>Fes</h6></li>
+          <li class="list-group-item" *ngFor="let destination of mission.destinations">
+            <h6>{{destination.name}}</h6>
+          </li>
+
         </ul>
       </div>
     </div>
     <div class="d-flex">
       <div class="value w-100">
         <ul class="list-group mb-1">
-          <li class="list-group-item active" aria-current="true">
+          <li class="list-group-item list-group-item-action list-group-item-light" aria-current="true">
             <h6>Participants</h6>
           </li>
           <li
@@ -99,12 +101,16 @@
     </div>
     <div class="d-flex">
       <button type="button" class="btn btn-hipster me-1" (click)="onDownload()">
-        <span><i class="fas fa-file-download fa-2x"></i></span>
-        Download Order
+        <span class="me-1"><i class="fas fa-file-download"></i></span>
+        <strong>Download</strong>
       </button>
       <button type="button" class="btn btn-hipster ms-1" (click)="onView()">
-        <span><i class="far fa-file-pdf fa-2x"></i></span>
-        View Order
+        <span class="me-1"><i class="far fa-file-pdf"></i></span>
+        <strong>View</strong>
+      </button>
+      <button type="button" class="btn btn-hipster-orange ms-1" (click)="onShowMap()">
+        <span class="me-1"><i class="fas fa-map"></i></span>
+        <strong>Map</strong> 
       </button>
     </div>
   </div>
