--- a/src/app/modules/mission/page/mission/mission-map/mission-map.component.html
+++ b/src/app/modules/mission/page/mission/mission-map/mission-map.component.html
@@ -1,1 +1,4 @@
-<div #map style="width: 100%; height: 100%" class="bg-danger"></div>
+<div class="mission-map">
+    <div #map style="width: 100%; height: 100%" class="bg-danger"></div>
+</div>
+
